Tweak to fix an IE8 layout issue.

--- a/drupal/themes/trunk/instant_indicia/sass/instant_indicia.scss
+++ b/drupal/themes/trunk/instant_indicia/sass/instant_indicia.scss
@@ -28,7 +28,7 @@ h2 {
   &.two {
     > .column {
       width: 48%;
-      padding: 0 2%;
+      padding: 0 1%;
     }
     > .column:first-child {
       padding-left: 0;
